# DecentBridge

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
android/: AndroidManifest.xml  build.gradle
android/src/io/github/decentbridge/: BridgeActivity.java  BridgeService.java  ScaleBleManager.java
assets/api/: index.html  rest_v1.yml  websocket_v1.yml
assets/profiles/: 7g_basket.json  80's_Espresso.json  A-Flow_default-dark.json  A-Flow_default-like-dflow.json  A-Flow_default-medium.json  A-Flow_default-very-dark.json  Best_overall_pressure_profile.json  Best_practice_(light_roast).json  Blooming_Allongé.json  Blooming_Espresso.json  Classic_Italian_espresso.json  Cleaning_Forward_Flush_x5.json  Cleaning_Forward_flush.json  Cleaning_Weber_Spring_Clean.json  Damian's_LM_Leva.json  Damian's_LRv2.json  Damian's_LRv3.json  Damian's_Q.json  Default.json  E61_classic_gently_up_to_10_bar.json  E61_espresso_machine.json  E61_rocketing_up_to_10_bar.json  E61_with_fast_preinfusion_to_9_bar.json  Easy_blooming_-_active_pressure_decline.json  Espresso_Forge_Dark.json  Espresso_Forge_Light.json  Extractamundo_Dos!.json  Filter3.json  Filter_2.0.json  Filter_2.1.json  Flow_profile_for_milky_drinks.json  Flow_profile_for_straight_espresso.json  Gagné_Adaptive_Allongé_94C_v1.0.json  Gagné_Adaptive_Shot_92C_v1.0.json  Gentle_and_sweet.json  Gentle_flat_2.5_ml_per_second.json  Gentle_preinfusion_flow_profile.json  Gentler_but_still_traditional_8.4_bar.json  Hybrid_pour_over_espresso.json  I_got_your_back.json  (+44 more)
src/: main.cpp
src/ble/: blemanager.cpp  blemanager.h  de1device.cpp  de1device.h  sensordevice.cpp  sensordevice.h
src/ble/scales/: flowscale.cpp  scalefactory.cpp
src/ble/sensors/: bookoomonitor.cpp  bookoomonitor.h  sensorfactory.cpp  sensorfactory.h
src/ble/transport/: androidscalebletransport.cpp  qtscalebletransport.cpp
src/core/: bridge.cpp  bridge.h  settings.cpp  settings.h  skinmanager.cpp  skinmanager.h
src/network/: discoveryservice.cpp  discoveryservice.h  httpserver.cpp  httpserver.h  websocketserver.cpp  websocketserver.h
src/qml/: Main.qml
tools/: push-skin.sh
